--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div>
       <h1>Arin Yazilim javascript dersleri</h1>
+      <h2>dev branch ina ekleme yapıyorum.</h2>
     </div>
     <script src="script.js"></script>
   </body>
