--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
       <h1>Arin Yazilim javascript dersleri</h1>
       <h2>dev branch ina ekleme yapıyorum.</h2>
+      <h1>dev branch 3</h1>
     </div>
     <script src="script.js"></script>
   </body>
